# netbox-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  netbox-plugin.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflow/: publish.yaml
nbtools/: __init__.py  filtersets.py  forms.py  jobs.py  models.py  navigation.py  tables.py  template_content.py  template_extensions.py  ui.py  urls.py  views.py
nbtools/Views/: Documentation_reviewer.py  IP_prefix_checker.py  Serial_checker.py  VM_tool.py
nbtools/api/: __init__.py  serializers.py  urls.py  views.py
nbtools/migrations/: 0001_initial.py  0002_add_documentation_fields.py  0002_add_file_type_mappings.py  0002_update_sharepointconfig.py  0003_add_application_id_to_documentationbinding.py  0003_add_service_and_application.py  0004_update_service_and_application.py  0005_add_tag_fields.py  0005_fix_tag_related_names.py  0005_update_tag_related_names.py  0006_auto_sync_model_state.py  0007_sync_service_application_fields.py
nbtools/netbox_tools.egg-info/: PKG-INFO  SOURCES.txt
nbtools/templates/: placeholder.html
nbtools/templates/nbtools/: app_docs_box.html  dashboard.html  documentation_binding.html  documentation_reviewer.html  ip_prefix_checker.html  prefix_validator.html  serial_checker.html  vm_docs_box.html  vm_ip_assigner  vm_ip_assigner.html  vm_sidebar_panel.html  vm_tab.html  vm_tool.html
nbtools/templates/nbtools/applications/: application_detail.html  service_detail.html
nbtools/templates/nbtools/panels/: vm_panel.html
nbtools/view_scripts/: Application_detail.py  Application_edit.py  Application_list.py  Documentation_binding.py  Documentation_reviewer.py  Prefix_validator.py  Service_detail.py  Service_edit.py  Service_list.py  change_log_views.py  delete_views.py
netbox-tools/: __init__.py  navigation.py  plugins.py  urls.py
netbox-tools/templates/netbox_tools/: base.html
netbox-tools/views/: __init__.py
netbox_tools.egg-info/: PKG-INFO  SOURCES.txt
