[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-tools"
version = "1.1.0"
description = "Collection of tools for NetBox"
authors = [
    { name = "Simon Möller Ahlquist", email = "simon.moller@lindab.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/mosi01/netbox-tools"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nbtools*", "nbtools.Views"]

[tool.setuptools.package-data]
"nbtools" = ["*", "templates/**/*", "static/**/*", "migrations/*.py", "Views/*.py"]
