[metadata]
name = netbox-tools
version = 0.2
description = A NetBox plugin for custom network tools
author = Your Name
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/youruser/netbox-tools
classifiers =
    Framework :: Django
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
install_requires =
    netbox>=4.3
    Django>=4.2

[options.entry_points]
netbox.plugins =
    netbox_tools = netbox_tools.plugins:NetBoxToolsConfig
